...
    return Scaffold(
      appBar: AppBar(
        title: Text(
            "Bem vindo, ${FirebaseAuth.instance.currentUser!.email!.split("@")[0]}"),
        actions: [
          TextButton(
              key: const Key("buttonLogout"),
              style: TextButton.styleFrom(primary: Colors.white),
              onPressed: () {
                FirebaseAuth.instance.signOut().then((value) {
                  Navigator.pushNamedAndRemoveUntil(
                      context, Routes.login, (route) => false);
                });
              },
              child: const Text("Sair"))
        ],
      ),
      body: _isLoading
          ? const Center(child: CircularProgressIndicator())
          : _location == null
              ? Column(
...
